# Python

./: teste.py
00-Fundamentos/: README.md  Sist-banco-desafio.py
01-Estrutura-de-dados/: Sist-banco-com-funcao.py
API_Flask/: pyproject.toml
Dio-Tech-Ci-ncias-de-Dados-com-Python-main/: README.md  e-commercer.sql
Dio-Tech-Ci-ncias-de-Dados-com-Python-main/Desafio-SQL/: Insert_dados_Oficina.sql  oficinamecanica.sql  querySQL.sql
Dio-Tech-Ci-ncias-de-Dados-com-Python-main/Python/00-Fundamentos/: README.md
Dio-Tech-Ci-ncias-de-Dados-com-Python-main/Python/01-Estrutura-de-dados/: README.md  Sist-banco-com-funcao.py
