[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = "Esse mini projeto é para aprendizagem para API Flask"
authors = ["Thyago Higgins"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
